
- Added ability to define default values for Slice data members. For
  example, you can write:

  // Slice
  class C
  {
      int i = 2;
      string name = "John";
  };

- Fixed IceGrid bug where the IceGrid node would disconnect from the
  registry if the clock was moved backward.

- Fixed hang in slice2cs and slice2py that would occur if a comment
  contained a '<' with no closing '>'.


Ruby Changes
============

- Fixed a compilation error when using Ruby 1.8.7 (patch level >=
  248).


======================================================================
Changes since version 3.3.1
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- Added a new asynchronous method invocation (AMI) facility for C++,
  C#, Java, and Python. The previous API is now deprecated.

- Added the ability to invoke flushBatchRequests asynchronously on a
  communicator or connection.

- The Ice extension for Visual Studio is now included in the Ice
  distribution. The source code for the extension can be found in the
  vsplugin subdirectory of the source distribution. Note that the
  extension no longer supports Visual Studio 2005.

- Added a cloneWithPrefix operation to the Logger interface.

- Added a removeServantLocator operation to the ObjectAdapter
  interface.

- The translators now include a comment at the beginning of each
  generated file to indicate that the file is machine-generated.
  This is particularly useful for tools such as StyleCop.

- The IceGrid graphical administration tool now allows you to filter
  the live deployment for a particular application.

- Added the ability to query an IceGrid node to determine the number
  of CPU sockets on its host machine. Currently this only works for
  Windows Vista (or later) and native (non-VM) Linux. You can also
  manually configure the number of CPU sockets.
